--- a/notebooks/b_coding/Intro to Python/11_Functions.ipynb
+++ b/notebooks/b_coding/Intro to Python/11_Functions.ipynb
@@ -9,6 +9,7 @@
     ]
    },
    "source": [
+    "(Functions_python)=\n",
     "# Creating custom functions\n",
     "``` {index} Creating functions (Python)\n",
     "```\n",
