--- a/notebooks/b_coding/Intro to Python/13_File_handling.ipynb
+++ b/notebooks/b_coding/Intro to Python/13_File_handling.ipynb
@@ -9,8 +9,9 @@
     ]
    },
    "source": [
+    "(File_handling)=\n",
     "# File handling\n",
-    "``` {index} File handling (Python)\n",
+    "``` {index} File handling\n",
     "```\n",
     "Suppose we have a text file like below, from which we would like to extract temperature and density data:\n",
     "\n",
@@ -35,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(python_file_handling)=\n",
+    "(Python_file_handling)=\n",
     "## Python\n",
     "\n",
     "It is usually best to read and write files using the `with` statement which will improve our syntax and do a lot of things automatically for us (like closing the file we opened).\n",
@@ -94,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(numpy_file_handling)=\n",
+    "(Numpy_file_handling)=\n",
     "## NumPy\n",
     "\n",
     "NumPy's [`genfromtxt`](https://numpy.org/doc/1.18/reference/generated/numpy.genfromtxt.html) (generate from text) function provides full control over the file which we are trying to open. It initialises a numpy array from the data. Some of the parameters include:\n",
@@ -174,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(pandas_file_handling)=\n",
+    "(Pandas_file_handling)=\n",
     "## Pandas\n",
     "\n",
     "Despite its name, pandas' [`read_csv`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.read_csv.html) can read many different types of files, including our `.dat` file. Pandas `DataFrame` is the primary data structure in pandas, so this function will generate one such `DataFrame`. It is a very powerful object with many capabilities, our own tutorial can be found in {ref}`Introduction to Pandas <pandas_intro>`.\n",
