--- a/notebooks/b_coding/Intro to Python/14_Dictionaries.ipynb
+++ b/notebooks/b_coding/Intro to Python/14_Dictionaries.ipynb
@@ -9,6 +9,7 @@
     ]
    },
    "source": [
+    "(Dictionaries)=\n",
     "# Dictionaries\n",
     "``` {index} Dictionaries (Python)\n",
     "```\n",
