--- a/notebooks/b_coding/Intro to Python/15_Flow_control_statements.ipynb
+++ b/notebooks/b_coding/Intro to Python/15_Flow_control_statements.ipynb
@@ -9,10 +9,11 @@
     ]
    },
    "source": [
+    "(Flow_control_statements)=\n",
     "# Flow control statements\n",
     "``` {index} Break and continue statements (Python)\n",
     "```\n",
-    "(break_continue)=\n",
+    "(Break_continue)=\n",
     "## Break and continue statements\n",
     "\n",
     "The `break` and `continue` statements are used in loops (`while` or `for`) to modify the behaviour of the loop. `break` ends the loop, while `continue` ends the current iteration and continues onto the next one.\n",
@@ -80,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(pass)=\n",
+    "(Pass)=\n",
     "## Pass statement\n",
     "``` {index} Pass statement (python)\n",
     "```\n",
