--- a/notebooks/b_coding/Intro to Python/17_Matplotlib.ipynb
+++ b/notebooks/b_coding/Intro to Python/17_Matplotlib.ipynb
@@ -9,6 +9,7 @@
     ]
    },
    "source": [
+    "(Matplotlib)=\n",
     "# Plotting data with Matplotlib\n",
     "``` {index} Matplotlib (Python)\n",
     "```\n",
@@ -53,7 +54,7 @@
     "- `plt.show()` - displays the graph\n",
     "\n",
     "## Example plots\n",
-    "(line_scatter)=\n",
+    "(Line_scatter)=\n",
     "### Line and scatter data"
    ]
   },
@@ -108,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(histogram)=\n",
+    "(Histogram)=\n",
     "### Histogram\n",
     "``` {index} Plots: histogram\n",
     "```"
@@ -156,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(image_plot)=\n",
+    "(Image_plot)=\n",
     "### Image plot\n",
     "``` {index} Plots: image\n",
     "```"
