--- a/notebooks/b_coding/Intro to Python/1_Printing_and_formatting_statements.ipynb
+++ b/notebooks/b_coding/Intro to Python/1_Printing_and_formatting_statements.ipynb
@@ -9,13 +9,14 @@
     ]
    },
    "source": [
+    "(Printing_and_formatting_statements)=\n",
     "# Printing and formatting statements\n",
     "``` {index} Printing and formatting statements (Python)\n",
     "```\n",
     "\n",
     "## Basic printing\n",
     "\n",
-    "(basic_printing)=\n",
+    "(Basic_printing)=\n",
     "### Printing text\n",
     "A line of code in Python is a _statement_:\n",
     "\n",
@@ -147,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(formatted_printing)=\n",
+    "(Formatted_printing)=\n",
     "## String formating\n",
     "``` {index} String formating (python)\n",
     "```\n",
