--- a/notebooks/b_coding/Intro to Python/2_Variables.ipynb
+++ b/notebooks/b_coding/Intro to Python/2_Variables.ipynb
@@ -9,6 +9,7 @@
     ]
    },
    "source": [
+    "(Variables)=\n",
     "# Variables\n",
     "``` {index} Variables (Python)\n",
     "```\n",
@@ -39,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(variable_types)=\n",
+    "(Variable_types)=\n",
     "## Types of variables\n",
     "Common types of Python variables are:\n",
     "- _str_ - string, e.g. `\"Hello world!\"`\n",
@@ -108,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(variable_operations)=\n",
+    "(Variable_operations)=\n",
     "## Operations on variables\n",
     "### Numbers\n",
     "An integer-type variable will automatically change to float if it is required for mathematical accuracy:"
