--- a/notebooks/b_coding/Intro to Python/4_While_loops.ipynb
+++ b/notebooks/b_coding/Intro to Python/4_While_loops.ipynb
@@ -9,6 +9,7 @@
     ]
    },
    "source": [
+    "(While_loops)=\n",
     "# While loops\n",
     "``` {index} Loops: while loops (Python)\n",
     "```\n",
