--- a/notebooks/b_coding/Intro to Python/7_List_comprehensions.ipynb
+++ b/notebooks/b_coding/Intro to Python/7_List_comprehensions.ipynb
@@ -9,6 +9,7 @@
     ]
    },
    "source": [
+    "(List_comprehensions)=\n",
     "# List comprehensions\n",
     "``` {index} List comprehensions (Python)\n",
     "```\n",
