--- a/notebooks/b_coding/Intro to Python/8_Nested_lists.ipynb
+++ b/notebooks/b_coding/Intro to Python/8_Nested_lists.ipynb
@@ -9,6 +9,7 @@
     ]
    },
    "source": [
+    "(Nested_lists)=\n",
     "# Nested lists\n",
     "``` {index} Nested lists (Python)\n",
     "```\n",
