--- a/notebooks/b_coding/Intro to Python/9_Handling_errors.ipynb
+++ b/notebooks/b_coding/Intro to Python/9_Handling_errors.ipynb
@@ -9,13 +9,14 @@
     ]
    },
    "source": [
+    "(Handling_errors)=\n",
     "# Handling errors\n",
     "``` {index} Handling errors (Python)\n",
     "```\n",
     "\n",
     "When an _error_ occurs in Python, an _exception_ is _raised_. \n",
     "\n",
-    "(error_types)=\n",
+    "(Error_types)=\n",
     "## Error types\n",
     "The full list of built-in exceptions is available in the [documentation](https://docs.python.org/3/library/exceptions.html#concrete-exceptions).\n",
     "\n",
@@ -38,7 +39,7 @@
     "    \n",
     "`IndexError` refers to incorrect index, such as out of bounds.\n",
     "\n",
-    "(raising_errors)=\n",
+    "(Raising_errors)=\n",
     "## Raising errors\n",
     "In-built functions trigger or `raise` errors in Python. We can do that as well by using _raise_:\n",
     "\n",
@@ -55,7 +56,7 @@
     "    \n",
     "## Catching errors\n",
     "\n",
-    "(try_except)=\n",
+    "(Try_except)=\n",
     "### Try and except blocks\n",
     "To handle errors in the code gracefully, we can use `try` and `except` blocks to avoid unnecessary crashes of the program. The `try` block executes the program and if the program fails, exception is raised and we can recover from the error. This is especially useful if we do not want our program to crash (imagine YouTube crashing!). The syntax is:\n",
     "\n",
