--- a/notebooks/b_coding/Pandas/1_basics.ipynb
+++ b/notebooks/b_coding/Pandas/1_basics.ipynb
@@ -9,6 +9,7 @@
     ]
    },
    "source": [
+    "(Pandas_intro)=\n",
     "# Introduction\n",
     "```{index} Pandas: basics\n",
     "```\n",
@@ -34,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(pandas_objects)=\n",
+    "(Pandas_objects)=\n",
     "## Pandas objects\n",
     "\n",
     "**DataFrame** is a 2D data structure with columns and rows, much like a table or Excel spreadsheet. To manually create a DataFrame, we can create a dictionary of lists. The keys are used as a table header and values in each list as rows:"
@@ -189,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(reading_files)=\n",
+    "(Reading_files)=\n",
     "## Reading files\n",
     "\n",
     "``` {index} Pandas: reading and writing files\n",
@@ -362,7 +363,7 @@
    "source": [
     "We have 25,000 rows and 11 columns, that's a lot of data!\n",
     "\n",
-    "(writing_files)=\n",
+    "(Writing_files)=\n",
     "## Writing files\n",
     "\n",
     "Let's say we want to export this data as an excel spreadsheet but we only want to export magnitude, latitude, longitude and depth columns:"
