--- a/notebooks/b_coding/Pandas/2_filter_select_assign.ipynb
+++ b/notebooks/b_coding/Pandas/2_filter_select_assign.ipynb
@@ -9,6 +9,7 @@
     ]
    },
    "source": [
+    "(Filtering_selecting_assigning)=\n",
     "# Filtering, selecting and assigning\n",
     "``` {index} Pandas: filtering\n",
     "```\n",
