--- a/notebooks/b_coding/Pandas/3_merge_combine_group_sort.ipynb
+++ b/notebooks/b_coding/Pandas/3_merge_combine_group_sort.ipynb
@@ -9,6 +9,7 @@
     ]
    },
    "source": [
+    "(Merging_combining_grouping_sorting)=\n",
     "# Merging, combining, grouping and sorting\n",
     "\n",
     "## Merging\n",
@@ -526,7 +527,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(combining)=\n",
+    "(Combining)=\n",
     "## Combining\n",
     "``` {index} Pandas: combining\n",
     "```\n",
@@ -577,7 +578,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(grouping)=\n",
+    "(Grouping)=\n",
     "## Grouping\n",
     "``` {index} Pandas: grouping\n",
     "```\n",
@@ -766,7 +767,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(sorting)=\n",
+    "(Sorting)=\n",
     "## Sorting\n",
     "``` {index} Pandas: sorting\n",
     "```\n",
