--- a/notebooks/b_coding/Pandas/4_summary_statistics.ipynb
+++ b/notebooks/b_coding/Pandas/4_summary_statistics.ipynb
@@ -9,6 +9,7 @@
     ]
    },
    "source": [
+    "(Pandas_statistics)=\n",
     "# Summary statistics\n",
     "``` {index} Pandas: summary statistics\n",
     "```\n",
