--- a/notebooks/b_coding/Programming Tools/1_Version_Control_Git.ipynb
+++ b/notebooks/b_coding/Programming Tools/1_Version_Control_Git.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(Version_Control_Git)=\n",
     "# Version control Git\n",
     "```{index} Version control Git\n",
     "```\n",
