--- a/notebooks/c_mathematics/differential_equations/4_higher_ord_lin_odes.ipynb
+++ b/notebooks/c_mathematics/differential_equations/4_higher_ord_lin_odes.ipynb
@@ -8,10 +8,7 @@
     ]
    },
    "source": [
-    "(Higher order Linear ODEs)=\n",
-    "# Higher order Linear ODEs\n",
-    "\n",
-    "Text"
+    "# Higher order Linear ODEs\n"
    ]
   },
   {
