--- a/notebooks/c_mathematics/sets_and_functions/5_elementary_functions_2.ipynb
+++ b/notebooks/c_mathematics/sets_and_functions/5_elementary_functions_2.ipynb
@@ -8,7 +8,7 @@
     ]
    },
    "source": [
-    "(Elementary functions 2)=\n",
+    "(6_elementary_functions_2)=\n",
     "# Elementary functions 2\n",
     "\n",
     "Now that we know what an inverse function is, let us think about the inverse functions of elementary functions we explored in a previous notebook.\n",
