--- a/notebooks/c_mathematics/sets_and_functions/6_composition_and_inverse.ipynb
+++ b/notebooks/c_mathematics/sets_and_functions/6_composition_and_inverse.ipynb
@@ -8,7 +8,7 @@
     ]
    },
    "source": [
-    "(Composition and Inverse Functions)=\n",
+    "(5_composition_and_inverse)=\n",
     "# Composition and Inverse Functions\n",
     "\n",
     "(compninv_isb)=\n",
