--- a/notebooks/b_coding/Pandas/5_time_stamps.ipynb
+++ b/notebooks/b_coding/Pandas/5_time_stamps.ipynb
@@ -9,6 +9,7 @@
     ]
    },
    "source": [
+    "(Pandas_date_time)=\n",
     "# Creating date-time stamps\n",
     "``` {index} Pandas: date-time stamps\n",
     "```\n",
