update "Defining Activity coefficients" and minor changes

--- a/notebooks/a_modules/intro.ipynb
+++ b/notebooks/a_modules/intro.ipynb
@@ -40,8 +40,6 @@
     "\n",
     "[<!-- module-progr badge --><span class=\"module module-progr\">Programming for Geoscientists</span>](module-progr)\n",
     "\n",
-    "- {doc}`NumPy arrays <notebooks\\coding\\NumPy_Arrays.ipynb>`\n",
-    "\n",
     "(module-mfg)=\n",
     "### Mathematics for Geoscientists\n",
     "\n",
@@ -51,10 +49,6 @@
     "### Mathematics Methods 1\n",
     "\n",
     "[<!-- module-mm1 badge --><span class=\"module module-mm1\">Maths Methods 1</span>](module-mm1)\n",
-    "\n",
-    "- {doc}`Eigenvalues <notebooks\\mathematics\\moduletags.ipynb>`\n",
-    "- {doc}`Matrix multiplication <notebooks\\mathematics\\complex_analysis\\mynotebook.ipynb>`\n",
-    "- {doc}`Matrices (Lecture 4) <notebooks\\modules\\math_methods_1\\Matrices_Linear_Algebra.ipynb>`\n",
     "\n",
     "(module-cfg)=\n",
     "### Chemistry for Geoscientists\n",
@@ -100,9 +94,6 @@
     "### Mathematics Methods 2\n",
     "\n",
     "[<!-- module-mm2 badge --><span class=\"module module-mm2\">Maths Methods 2</span>](module-mm2)\n",
-    "\n",
-    "- {doc}`Fluid Dynamics <notebooks\\mathematics\\moduletags.ipynb>`\n",
-    "- {doc}`Timestepping an ODE <notebooks\\mathematics\\moduletags.ipynb>`\n",
     "\n",
     "(module-exstat)=\n",
     "### Excel and Statistics\n",
@@ -157,8 +148,6 @@
     "\n",
     "[<!-- module-fieldgp badge --><span class=\"module module-fieldgp\">Field Geophysics</span>](module-fieldgp)\n",
     "\n",
-    "- {doc}`1D resistivity forward modelling <notebooks\\geosciences\\1D_Resistivity_Forward_Modelling.ipynb>`\n",
-    "\n",
     "(module-igg)=\n",
     "### Igneous Geology\n",
     "\n",
@@ -184,11 +173,6 @@
     "\n",
     "[<!-- module-rsep badge --><span class=\"module module-rsep\">Remote Sensing Earth and Planets</span>](module-rsep)\n",
     "\n",
-    "- {doc}`Moving average filter <notebooks\\geosciences\\remote_sensing\\Image_Filtering.ipynb>`\n",
-    "- {doc}`Sharpening filters <notebooks\\geosciences\\remote_sensing\\Image_Filtering.ipynb>`\n",
-    "- {doc}`Edge detection (gradient operators) <notebooks\\geosciences\\remote_sensing\\Image_Filtering.ipynb>`\n",
-    "- {doc}`Point operations <notebooks\\geosciences\\remote_sensing\\Image_Point_Operations.ipynb>`\n",
-    "\n",
     "(module-mse1)=\n",
     "### Mathematics for Scientists and Engineers 1\n",
     "\n",
@@ -198,8 +182,6 @@
     "### Mathematics for Scientists and Engineers 2\n",
     "\n",
     "[<!-- module-mse2 badge --><span class=\"module module-mse2\">Mathematics for Scientists and Engineers 2</span>](module-mse2)\n",
-    "\n",
-    "- {doc}`Laplace's \\\\( u_{xx} + u_{yy} = 0 \\\\) <notebooks\\mathematics\\moduletags.ipynb>`\n",
     "\n",
     "(module-mech)=\n",
     "### Mechanics\n",
@@ -231,14 +213,10 @@
     "\n",
     "[<!-- module-seis badge --><span class=\"module module-seis\">Seismology</span>](module-seis)\n",
     "\n",
-    "- {doc}`Downloading earthquake data <notebooks\\geosciences\\Seismology.ipynb>`\n",
-    "\n",
     "(module-nm)=\n",
     "### Numerical Methods\n",
     "\n",
     "[<!-- module-nm badge --><span class=\"module module-nm\">Numerical Methods</span>](module-nm)\n",
-    "\n",
-    "- {doc}`Timestepping an ODE <notebooks\\mathematics\\moduletags.ipynb>`\n",
     "\n",
     "\n",
     "## Year 3/4\n",
@@ -282,11 +260,6 @@
     "### Advanced Remote Sensing\n",
     "\n",
     "[<!-- module-ars badge --><span class=\"module module-ars\">Advanced Remote Sensing</span>](module-ars)\n",
-    "\n",
-    "- {doc}`Point operations <notebooks\\geosciences\\remote_sensing\\Image_Point_Operations.ipynb>`\n",
-    "- {doc}`Cut-off clipping <notebooks\\geosciences\\remote_sensing\\Image_Point_Operations.ipynb>`\n",
-    "- {doc}`Contrast enhancement <notebooks\\geosciences\\remote_sensing\\Image_Point_Operations.ipynb>`\n",
-    "- {doc}`Balance contrast enhancement technique (BCET)$^2$ <notebooks\\geosciences\\remote_sensing\\Image_Point_Operations.ipynb>`\n",
     "\n",
     "(module-iafg)=\n",
     "### Integrated Advanced Field Geology\n",
@@ -332,8 +305,6 @@
     "### Gravity, Magnetism, and Orbital Dynamics\n",
     "\n",
     "[<!-- module-gmod badge --><span class=\"module module-gmod\">Gravity, Magnetism, and Orbital Dynamics</span>](module-gmod)\n",
-    "\n",
-    "- {doc}`Keplerian orbits <notebooks\\geosciences\\Keplerian_Orbits.ipynb>`\n",
     "\n",
     "(module-psdp)=\n",
     "### Practical Seismic Data Processing\n",
@@ -410,15 +381,10 @@
     "\n",
     "[<!-- module-ginv badge --><span class=\"module module-ginv\">Geophysical Inversion</span>](module-ginv)\n",
     "\n",
-    "- {doc}`Eigenvalues <notebooks\\mathematics\\moduletags.ipynb>`\n",
-    "\n",
     "(module-gdyn)=\n",
     "### Geodynamics\n",
     "\n",
     "[<!-- module-gdyn badge --><span class=\"module module-gdyn\">Geodynamics</span>](module-gdyn)\n",
-    "\n",
-    "- {doc}`1D heat conduction (layered medium) <notebooks\\geosciences\\1D_Heat_Conduction.ipynb>`\n",
-    "- {doc}`1D pipe flow <notebooks\\geosciences\\Lecture5_1D_Pipe_Flow.ipynb>`\n",
     "\n",
     "(module-cac)=\n",
     "### Collisions and Craters\n",
@@ -446,9 +412,9 @@
     "[<!-- module-palaocean badge --><span class=\"module module-palaocean\">Palaeoceanography</span>](module-palaocean)\n",
     "\n",
     "(module-gagp)=\n",
-    "### Geophysical Synthesis Group Project\n",
+    "### Geophysical Analysis Group Project\n",
     "\n",
-    "[<!-- module-gagp badge --><span class=\"module module-gagp\">Geophysical Synthesis Group Project</span>](module-gagp)\n",
+    "[<!-- module-gagp badge --><span class=\"module module-gagp\">Geophysical Analysiss Group Project</span>](module-gagp)\n",
     "\n",
     "(module-plaphy)=\n",
     "### Planetary Physics\n",
@@ -465,13 +431,6 @@
     "\n",
     "[<!-- module-meteo badge --><span class=\"module module-meteo\">Meteorites</span>](module-meteo)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
