new LTG notebooks

--- a/notebooks/d_geosciences/Low-Temperature Geochemistry/Defining_Activity_Coefficients.ipynb
+++ b/notebooks/d_geosciences/Low-Temperature Geochemistry/Defining_Activity_Coefficients.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "## Calculating activity coefficients\n",
     "\n",
-    "We can get $y_i$ by:\n",
+    "We can get $\\gamma_i$ by:\n",
     "\n",
     "1) Some helpful rules\n",
     "\n",
@@ -41,7 +41,7 @@
     "   \n",
     "2) Models exist that predict the values of activity coefficients given a set of empirical, substance-specific, constants and a parameter, **ionic strength ($I$)**, that models the effect of other ions and the solvent. Ionic strength accounts for Coulombic interactions and other effects between ions.\n",
     "\n",
-    "$$I = \\frac{1}{2} \\sum_i m_j z_j^2$$\n",
+    "$$I = \\frac{1}{2} \\sum_j m_j z_j^2$$\n",
     "\n",
     "where $m_j$ = concentration (molarity, molality), and $z_j$ = ionic charge.\n",
     "\n",
@@ -56,11 +56,11 @@
     "\n",
     "There are several models available for calculating activity coefficients.\n",
     "\n",
-    "1) Debye-Huckel (limiting) model (useful when $I \\leq 0.01\\,m$):\n",
+    "(1) Debye-Huckel (limiting) model (useful when $I \\leq 0.01\\,m$):\n",
     "\n",
     "$$\\log \\gamma_i = -A z_i^2 \\sqrt{I}$$\n",
     "\n",
-    "2) Debye-Huckel (extended) model (useful when $I \\leq 0.1\\,m$):\n",
+    "(2) Debye-Huckel (extended) model (useful when $I \\leq 0.1\\,m$):\n",
     "\n",
     "$$\\log \\gamma_i = \\frac{-A z_i^2 \\sqrt{I}}{1+å_i B \\sqrt{I}}$$\n",
     "\n",
@@ -71,11 +71,11 @@
     "    (iii) Size of the ions do not vary with ionic strength.\n",
     "    (iv) Interactions among aqueous species are fully electrostatic, excludes repulsion for ion of the same charge.\n",
     "\n",
-    "3) Davies model (useful when $I \\leq 0.6\\,m$):\n",
+    "(3) Davies model (useful when $I \\leq 0.6\\,m$):\n",
     "\n",
     "$$\\log \\gamma_i = -A z_i^2 \\left[ \\frac{\\sqrt{I}}{1+\\sqrt{I}} -0.3I \\right]$$\n",
     "\n",
-    "4) Truesdell-Jones model (useful when $I \\leq 2.0\\,m$):\n",
+    "(4) Truesdell-Jones model (useful when $I \\leq 2.0\\,m$):\n",
     "\n",
     "$$\\log \\gamma_i = \\frac{-A z_i^2 \\sqrt{I}}{1+å_i B \\sqrt{I}} + bI$$\n",
     "\n",
@@ -866,7 +866,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The activity coefficient of $Ca^{2+}$ in the Thames' river has been calculated. \n",
+    "The activity coefficient of $Ca^{2+}$ in the Thames river has been calculated. \n",
     "\n",
     "$\\quad$Using the Debye-Huckel limiting model, $\\gamma_{Ca^{2+}}=0.70$.\n",
     "\n",
@@ -876,7 +876,7 @@
     "\n",
     "$\\quad$Using the Truesdell-Jones model, $\\gamma_{Ca^{2+}}=0.73$.\n",
     "\n",
-    "The activity coefficient of $HCO_3^-$ in the Thames' river has been calculated. \n",
+    "The activity coefficient of $HCO_3^-$ in the Thames river has been calculated. \n",
     "\n",
     "$\\quad$Using the Debye-Huckel limiting model, $\\gamma_{HCO_3^-}=0.91$.\n",
     "\n",
