--- a/notebooks/d_geosciences/Low-Temperature Geochemistry/Reaction_Quotients.ipynb
+++ b/notebooks/d_geosciences/Low-Temperature Geochemistry/Reaction_Quotients.ipynb
@@ -26,7 +26,7 @@
     "   * $a_i$ are activities\n",
     "   * $v_i$ are the stoichiometric coefficients. $v_i>0$ for products and $v_i<0$ for coefficients.\n",
     "   \n",
-    "Not only activies, but partial pressures ($P$), fugacities ($f$), and concentrations ($[]$) can also be used in the definition of $Q$.\n",
+    "Not only activies, but partial pressures ($P$), fugacities ($f$), and concentrations ($[\\,]$) can also be used in the definition of $Q$.\n",
     "\n",
     "$$Q = \\frac{{P_C}^c \\cdot {P_D}^d}{{P_A}^a \\cdot {P_B}^b}$$\n",
     "\n",
@@ -38,28 +38,28 @@
     "\n",
     "Recall that:\n",
     "\n",
-    "$$\\Delta {G_r} = \\Delta {G_r}^\\circ + RT \\ln Q$$\n",
+    "$$\\Delta {G_r} = \\Delta G_r^o + RT \\ln Q$$\n",
     "\n",
     "Since $\\Delta {G_r} = 0$ and $Q = K_{eq}$ at equilibrium, so\n",
     "\n",
-    "$$\\Delta {G_r}^\\circ = -RT \\ln K_{eq}$$\n",
+    "$$\\Delta G_r^o = -RT \\ln K_{eq}$$\n",
     "\n",
     "Thus, \n",
     "\n",
-    "$$\\ln K_{eq} = -\\frac{\\Delta {G_r}^\\circ}{RT}$$\n",
+    "$$\\ln K_{eq} = -\\frac{\\Delta G_r^o}{RT}$$\n",
     "\n",
     "Since $\\Delta G = \\Delta H - T \\Delta S$, so\n",
     "\n",
-    "$$\\ln K_{eq} = -\\frac{\\Delta H^\\circ - T \\Delta S^\\circ}{RT}$$\n",
+    "$$\\ln K_{eq} = -\\frac{\\Delta H^o - T \\Delta S^o}{RT}$$\n",
     "\n",
-    "$$\\ln K_{eq} = -\\frac{\\Delta H^\\circ}{R} \\frac{1}{T} + \\frac{\\Delta S^\\circ}{R} = mx+b$$\n",
+    "$$\\ln K_{eq} = -\\frac{\\Delta H^o}{R} \\frac{1}{T} + \\frac{\\Delta S^o}{R} = mx+b$$\n",
     "\n",
     "Therefore, we can plot the temperature dependence of $K_{eq}$ by plotting a linear relationship of $\\ln K_{eq}$ (or $\\log K_{eq}$) against $\\frac{1}{T}$. This relationship is actually an integrated form of the **Van't Hoff equation**."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "hide-input"
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "hide-input"
@@ -91,6 +91,7 @@
     "# Hess' law calculator - return a quantity (e.g. enthalpy, entropy, Gibbs' free energy) of a given reaction\n",
     "# 'reaction' is a string of latex-style chemical equation with certain syntax - no space\n",
     "def hess_law_calculator(reaction, quantity_dict):\n",
+    "    # remove space, '$', and state labels\n",
     "    reaction = reaction.replace(' ', '').replace(\"$\", '').replace(\"(s)\", '').replace(\"(l)\", '').replace(\"(g)\", '').replace(\"(aq)\", '')\n",
     "    \n",
     "    # check where is the '=' symbol, and split into 2 strings\n",
@@ -152,7 +153,7 @@
    "source": [
     "## Lesson 3 - Problem 2 (Solubility of gypsum in water (calcium sulfate))\n",
     "\n",
-    "(a) You are asked to calculate the solubility product $({K_{sp}}^\\circ)$ of gypsum in standard condition. Follow the steps i-iii below.\n",
+    "(a) You are asked to calculate the solubility product $(K_{sp}^o)$ of gypsum in standard condition. Follow the steps i-iii below.\n",
     "\n",
     "$$(CaSO_4\\cdot2H_2O)_{gypsum} = Ca^{2+} + SO_4^{2-} + 2H_2O$$\n",
     "\n",
@@ -161,42 +162,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_c6b47_\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >Species/Compounds</th>        <th class=\"col_heading level0 col1\" >$$\\Delta {G_f}^\\circ\\,(kJ\\,mol^{-1})$$</th>        <th class=\"col_heading level0 col2\" >$$\\Delta {H_f}^\\circ\\,(kJ\\,mol^{-1})$$</th>        <th class=\"col_heading level0 col3\" >$$S^\\circ\\,(J\\,mol^{-1}K^{-1})$$</th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_f426d_\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >Species/Compounds</th>        <th class=\"col_heading level0 col1\" >$$\\Delta {G_f}^\\circ\\,(kJ\\,mol^{-1})$$</th>        <th class=\"col_heading level0 col2\" >$$\\Delta {H_f}^\\circ\\,(kJ\\,mol^{-1})$$</th>        <th class=\"col_heading level0 col3\" >$$S^\\circ\\,(J\\,mol^{-1}K^{-1})$$</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                                <td id=\"T_c6b47_row0_col0\" class=\"data row0 col0\" >$$Ca^{2+}$$</td>\n",
-       "                        <td id=\"T_c6b47_row0_col1\" class=\"data row0 col1\" >-552.80</td>\n",
-       "                        <td id=\"T_c6b47_row0_col2\" class=\"data row0 col2\" >-543.00</td>\n",
-       "                        <td id=\"T_c6b47_row0_col3\" class=\"data row0 col3\" >-56.20</td>\n",
+       "                                <td id=\"T_f426d_row0_col0\" class=\"data row0 col0\" >$$Ca^{2+}$$</td>\n",
+       "                        <td id=\"T_f426d_row0_col1\" class=\"data row0 col1\" >-552.80</td>\n",
+       "                        <td id=\"T_f426d_row0_col2\" class=\"data row0 col2\" >-543.00</td>\n",
+       "                        <td id=\"T_f426d_row0_col3\" class=\"data row0 col3\" >-56.20</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_c6b47_row1_col0\" class=\"data row1 col0\" >$$SO_4^{2-}$$</td>\n",
-       "                        <td id=\"T_c6b47_row1_col1\" class=\"data row1 col1\" >-744.00</td>\n",
-       "                        <td id=\"T_c6b47_row1_col2\" class=\"data row1 col2\" >-909.34</td>\n",
-       "                        <td id=\"T_c6b47_row1_col3\" class=\"data row1 col3\" >18.50</td>\n",
+       "                                <td id=\"T_f426d_row1_col0\" class=\"data row1 col0\" >$$SO_4^{2-}$$</td>\n",
+       "                        <td id=\"T_f426d_row1_col1\" class=\"data row1 col1\" >-744.00</td>\n",
+       "                        <td id=\"T_f426d_row1_col2\" class=\"data row1 col2\" >-909.34</td>\n",
+       "                        <td id=\"T_f426d_row1_col3\" class=\"data row1 col3\" >18.50</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_c6b47_row2_col0\" class=\"data row2 col0\" >$$H_2O$$</td>\n",
-       "                        <td id=\"T_c6b47_row2_col1\" class=\"data row2 col1\" >-237.14</td>\n",
-       "                        <td id=\"T_c6b47_row2_col2\" class=\"data row2 col2\" >-285.83</td>\n",
-       "                        <td id=\"T_c6b47_row2_col3\" class=\"data row2 col3\" >69.95</td>\n",
+       "                                <td id=\"T_f426d_row2_col0\" class=\"data row2 col0\" >$$H_2O$$</td>\n",
+       "                        <td id=\"T_f426d_row2_col1\" class=\"data row2 col1\" >-237.14</td>\n",
+       "                        <td id=\"T_f426d_row2_col2\" class=\"data row2 col2\" >-285.83</td>\n",
+       "                        <td id=\"T_f426d_row2_col3\" class=\"data row2 col3\" >69.95</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_c6b47_row3_col0\" class=\"data row3 col0\" >$$(CaSO_4\\cdot2H_2O)_{gypsum}$$</td>\n",
-       "                        <td id=\"T_c6b47_row3_col1\" class=\"data row3 col1\" >-1797.36</td>\n",
-       "                        <td id=\"T_c6b47_row3_col2\" class=\"data row3 col2\" >-2022.92</td>\n",
-       "                        <td id=\"T_c6b47_row3_col3\" class=\"data row3 col3\" >193.90</td>\n",
+       "                                <td id=\"T_f426d_row3_col0\" class=\"data row3 col0\" >$$(CaSO_4\\cdot2H_2O)_{gypsum}$$</td>\n",
+       "                        <td id=\"T_f426d_row3_col1\" class=\"data row3 col1\" >-1797.36</td>\n",
+       "                        <td id=\"T_f426d_row3_col2\" class=\"data row3 col2\" >-2022.92</td>\n",
+       "                        <td id=\"T_f426d_row3_col3\" class=\"data row3 col3\" >193.90</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x16bd3285400>"
+       "<pandas.io.formats.style.Styler at 0x201f5377f70>"
       ]
      },
      "metadata": {},
@@ -229,9 +230,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(i) Write the equilibrium constant $({K_{sp}}^\\circ)$ for this reaction.\n",
+    "(i) Write the equilibrium constant $(K_{sp}^o)$ for this reaction.\n",
     "\n",
-    "$${K_{sp}}^\\circ = \\frac{a_{Ca^{2+}} \\cdot a_{SO_4^{2-}} \\cdot a_{H_2O}^2}{a_{CaSO_4 \\cdot 2H_2O}}$$"
+    "$$K_{sp}^o = \\frac{a_{Ca^{2+}} \\cdot a_{SO_4^{2-}} \\cdot a_{H_2O}^2}{a_{CaSO_4 \\cdot 2H_2O}}$$"
    ]
   },
   {
@@ -243,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(iii) Use $\\Delta {G_r}^\\circ = -RT \\ln K_{eq}$.\n",
+    "(iii) Use $\\Delta G_r^o = -RT \\ln K_{eq}$.\n",
     "\n",
     "(Answer: The solubility product of gypsum at $25^\\circ C$ is $K_{sp}=10^{-4.60}$)"
    ]
@@ -274,16 +275,16 @@
    "source": [
     "(b) Calculate the solubility product of gypsum at $40^\\circ C$ using the van’t Hoff equation. A form of the (integrated) van’t Hoff equation to calculate the change in thermodynamic constant with temperature is:\n",
     "\n",
-    "$$\\ln K_{sp, T} = \\ln K_{sp, o} + \\frac{\\Delta {H_r}^\\circ}{R} \\left(\\frac{1}{T_o} - \\frac{1}{T_T} \\right)$$\n",
+    "$$\\ln K_{sp, T} = \\ln K_{sp, o} + \\frac{\\Delta H_r^o}{R} \\left(\\frac{1}{T_o} - \\frac{1}{T_T} \\right)$$\n",
     "\n",
     "where $T_o = 25^\\circ C$ and $R = 8.314 \\times 10^{-3}\\,kJ\\,mol^{-1}K^{-1}$.\n",
     "\n",
-    "(i) Calculate $\\Delta {H_r}^\\circ$ using the thermodynamic data above. Is this reaction endothermic or exothermic?"
+    "(i) Calculate $\\Delta H_r^o$ using the thermodynamic data above. Is this reaction endothermic or exothermic?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -311,19 +312,19 @@
    "source": [
     "(ii) Substitute values in the integrated van’t Hoff equation given above and calculate the new $K_{sp,T}$. Convert your answer to log-base 10.\n",
     "\n",
-    "$$\\ln K_{sp, T} = \\ln (10^{-4.60}) + \\frac{-1.08}{8.314} \\left(\\frac{1}{25+273.15} - \\frac{1}{40+273.15} \\right) = -10.61$$\n",
+    "$$\\ln K_{sp, T} = \\ln (10^{-4.60}) + \\frac{-1.08}{8.314 \\times 10^{-3}} \\left(\\frac{1}{25+273.15} - \\frac{1}{40+273.15} \\right) = -10.61$$\n",
     "\n",
     "Converting to log-base 10:\n",
     "\n",
     "$$\\log K_{sp, T} = \\frac{\\ln K_{sp, T}}{\\ln(10)} = -4.61$$\n",
     "\n",
     "$$\\therefore K_{sp, T} = 10^{-4.61}$$\n",
-    "There are various ways to plot the temperature dependence of $K_{eq}$ for this reaction. You can calculate $\\Delta {H_r}^\\circ$, $\\Delta {S_r}^\\circ$, and $K_{eq}$ at $25^\\circ C$ and then find the slope and y-intercept for a linear curve of $\\ln K_{eq}$ against $1/T$. Alternatively, using the equation above, you can draw a linear line in a $\\ln K_{eq}$ VS $1/T$ plot passing through two data points at $25^\\circ C$ and $40^\\circ C$ you already have."
+    "There are various ways to plot the temperature dependence of $K_{eq}$ for this reaction. You can calculate $\\Delta H_r^o$, $\\Delta S_r^o$, and $K_{eq}$ at $25^\\circ C$ and then find the slope and y-intercept for a linear curve of $\\ln K_{eq}$ against $1/T$. Alternatively, using the equation above, you can draw a linear line in a $\\ln K_{eq}$ VS $1/T$ plot passing through two data points at $25^\\circ C$ and $40^\\circ C$ you already have."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +333,7 @@
        "Text(3.32, -10.591, '$25^\\\\circ C$')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -389,26 +390,26 @@
     "\n",
     "The reaction quotient (for a reaction not at equilibrium) can be written as: \n",
     "\n",
-    "$${Q_{sp}}^o = \\frac{a_{Ca^{2+}} \\cdot a_{SO_4^{2-}} \\cdot a_{H_2O}^2}{a_{CaSO_4 \\cdot 2H_2O}}$$\n",
+    "$$Q_{sp}^o = \\frac{a_{Ca^{2+}} \\cdot a_{SO_4^{2-}} \\cdot a_{H_2O}^2}{a_{CaSO_4 \\cdot 2H_2O}}$$\n",
     "\n",
     "(ii) Take the ratio between the reaction quotient ($Q$) and the equilibrium constant ($K_{eq}$), which you wrote down in part a-i above. Recall that the activities of pure liquids and pure solids are equal to $1$. How does that ratio between $Q/K_{eq}$ help you address the question to know if the solution is over or undersaturated? Perform the calculation and provide an argument for why gypsum will dissolve under these conditions. \n",
     "\n",
     "We know that the equilibrium constant is given by: \n",
     "\n",
-    "$${K_{sp}}^o = \\frac{a_{Ca^{2+}} \\cdot a_{SO_4^{2-}} \\cdot a_{H_2O}^2}{a_{CaSO_4 \\cdot 2H_2O}}$$\n",
+    "$$K_{sp}^o = \\frac{a_{Ca^{2+}} \\cdot a_{SO_4^{2-}} \\cdot a_{H_2O}^2}{a_{CaSO_4 \\cdot 2H_2O}}$$\n",
     "\n",
     "Since the activity of pure solids and pure liquids are 1 by definition, $a_{CaSO_4 \\cdot 2H_2O} = 1$ and $a_{H_2O}^2 = 1$.\n",
     "\n",
     "To know if the solution is at equilibrium, we can take the ratio between the two constants:\n",
     "\n",
-    "$$\\frac{{Q_{sp}}^o}{{K_{sp}}^o} = \\frac{\\left(a_{Ca^{2+}} \\cdot a_{SO_4^{2-}}\\right)_Q}{\\left(a_{Ca^{2+}} \\cdot a_{SO_4^{2-}}\\right)_{K_{eq}}}$$\n",
+    "$$\\frac{Q_{sp}^o}{K_{sp}^o} = \\frac{\\left(a_{Ca^{2+}} \\cdot a_{SO_4^{2-}}\\right)_Q}{\\left(a_{Ca^{2+}} \\cdot a_{SO_4^{2-}}\\right)_{K_{eq}}}$$\n",
     "\n",
-    "In this equation, the numerator is sometimes called the “ion activity product, IAP”. If the ratio $\\frac{{Q_{sp}}^o}{{K_{sp}}^o}>1$, then the activity of the dissolved species is too high and they will precipitate (as the solution moves towards equilibrium). In contrast, if $\\frac{{Q_{sp}}^o}{{K_{sp}}^o}<1$ then\n",
+    "In this equation, the numerator is sometimes called the “ion activity product, IAP”. If the ratio $\\frac{Q_{sp}^o}{K_{sp}^o}>1$, then the activity of the dissolved species is too high and they will precipitate (as the solution moves towards equilibrium). In contrast, if $\\frac{Q_{sp}^o}{K_{sp}^o}<1$ then\n",
     "gypsum will dissolve towards equilibrium. \n",
     "\n",
     "Numerically,\n",
     "\n",
-    "$$\\frac{{Q_{sp}}^o}{{K_{sp}}^o} = \\frac{10^{-3} \\cdot 10^{-2}}{10^{-4.60}} = 10^{-0.4} < 1$$\n",
+    "$$\\frac{Q_{sp}^o}{K_{sp}^o} = \\frac{10^{-3} \\cdot 10^{-2}}{10^{-4.60}} = 10^{-0.4} < 1$$\n",
     "\n",
     "This number is less than 1, so the solution is undersaturated with respect to gypsum and it will therefore dissolve. "
    ]
