new HTG notebook

--- a/notebooks/d_geosciences/High-Temperature Geochemistry/Distribution_Coefficients.ipynb
+++ b/notebooks/d_geosciences/High-Temperature Geochemistry/Distribution_Coefficients.ipynb
@@ -285,7 +285,8 @@
    "source": [
     "## References\n",
     "\n",
-    "- Lecture slide and Practical for Lecture 1 of the High-Temperature Geochemistry module"
+    "- Lecture slide and Practical for Lecture 1 of the High-Temperature Geochemistry module\n",
+    "- Lecture slide for Lecture 4 of the Volcanism and Internal Processes module"
    ]
   }
  ],
