--- a/notebooks/d_geosciences/High-Temperature Geochemistry/Melting_and_Crystalisation.ipynb
+++ b/notebooks/d_geosciences/High-Temperature Geochemistry/Melting_and_Crystalisation.ipynb
@@ -8,7 +8,7 @@
     ]
    },
    "source": [
-    "# Melting and Crystalisation"
+    "# Melting and crystalisation"
    ]
   },
   {
@@ -75,7 +75,7 @@
    "metadata": {},
    "source": [
     "## Batch (equilibrium) melting\n",
-    "```{index} Batch (equilibrium) melting\n",
+    "```{index} Batch melting\n",
     "```\n",
     "Batch melting involves complete equilibration between the solid phase (rock) and the melt (liquid) that is produced. This yields the following mass balance for the concentrations of an element:\n",
     "\n",
@@ -340,7 +340,7 @@
    "metadata": {},
    "source": [
     "## Batch (equilibrium) crystallization\n",
-    "```{index} Batch (equilibrium) crystallization\n",
+    "```{index} Batch crystallization\n",
     "```\n",
     "Equilibrium crystallization occurs when the total liquid and the total solid remain in equilibrium throughout the crystallization (differentiation) of a magma. If we define $F$ as the fraction of the system that is still liquid (not crystallized) then:\n",
     "\n",
