--- a/notebooks/d_geosciences/Low-Temperature Geochemistry/Defining_Activity_Coefficients.ipynb
+++ b/notebooks/d_geosciences/Low-Temperature Geochemistry/Defining_Activity_Coefficients.ipynb
@@ -462,16 +462,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x20d3f32c3a0>"
+       "<matplotlib.legend.Legend at 0x20d40474190>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
